deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tech-app

spec:
  replicas: 1

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: tech-app

  template:
    metadata:
      labels:
        app: tech-app

    spec:
      containers:
        - name: tech-app

          image: zeeshancloud15/tech-app:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8080
