service.yaml
apiVersion: v1
kind: Service

metadata:
  name: tech-app-service

spec:
  selector:
    app: tech-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30081

  type: NodePort
